<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_main_navigation">MainActivity_navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="high_rated_movies">High Rated Movies</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="background_movie_poster_image">Background Movie Poster Image</string>
    <string name="movie_title">Movie Title</string>
    <string name="overview">Overview</string>
    <string name="sample_text">sample text</string>
    <string name="release">Release</string>
    <string name="logo_of_app">Logo of App</string>
    <string name="sort">Sort</string>
    <string name="released">Released</string>
    <string name="star_icon">Star icon</string>
    <string name="video_name">Video Name</string>
    <string name="image_slider">Image slider</string>
    <string name="youtube_type_video_button">Youtube Type Video Button</string>
    <string name="release_date">Release Date</string>
    <string name="images">Images</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="see_all">SEE ALL</string>
    <string name="reviews">Reviews</string>
    <string name="rating">Rating</string>
    <string name="author">Author</string>
    <string name="user_reviews">User Reviews</string>
    <string name="videos">Videos</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="noInternet">No internet connection!</string>
    <string name="retry">RETRY</string>
    <string name="popular">popular</string>
    <string name="toprated">top_rated</string>
    <string name="upcoming">upcoming</string>
    <string name="latest">latest</string>
    <string name="nowplaying">now_playing</string>
</resources>
