<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/popular_movie"
            android:title="@string/popular_movies" />
        <item
            android:id="@+id/high_rated"
            android:title="@string/top_rated_movies" />
        <item
            android:id="@+id/upcoming"
            android:title="@string/upcoming_movies"/>
        <item
            android:id="@+id/now_playing"
            android:title="@string/now_playing_movies"/>
        <item
            android:id="@+id/favorite_movies"
            android:title="@string/favorite_movies"/>


    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
